--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" type="text/javascript" src="p5.gif.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-zabawy_17358896496805297259.js"></script>
+  <script language="javascript" type="text/javascript" src="zabawy_1.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style. 
