moved gif library to library folder. or should I actually remove it all over and just reference it ?

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta name="theme-color" content="#D80D87" />
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/p5.gif.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
-  <script language="javascript" type="text/javascript" src="p5.gif.js"></script>
   <script language="javascript" type="text/javascript" src="zabawy_1.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
